--- a/all_static_files/includes/navbar.html
+++ b/all_static_files/includes/navbar.html
@@ -41,7 +41,7 @@
                             <i class="fa fa-bars"></i> All category
                         </button>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="{% url 'store' %}">All products</a>
+                            <a class="dropdown-item" href="{% url 'store' %}">All movies</a>
                             {% for category in links %}
                             <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
                             {% endfor %}
