--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -9,17 +9,13 @@
 <body>
 <div class="sign_up">
     <div class="welcome">
-        <a href="{% url 'home' %}">
-            <img src="{% static 'images/logo.png' %}" alt="logo">
-        </a>
         <div class="slogan">
-            <h3 class="first">Mua sắm thả ga</h3>
-            <h3 class="second">Về nhà đỡ tiếc</h3>
+            <h3 class="first">REAL VARID FILM</h3>
         </div>
     </div>
 
     <div class="content">
-        <h1 class="title">Đăng ký</h1>
+        <h1 class="title">SIGN UP</h1>
         
         <form method="post">
             {% csrf_token %}
@@ -27,7 +23,7 @@
             {{ form.email }}
             {{ form.password1 }}
             {{ form.password2 }}
-            <button class="submit" type="submit">Đăng ký</button>
+            <button class="submit" type="submit">SIGN UP</button>
         </form>
         {% if messages %}
             {% for message in messages %}
@@ -37,7 +33,7 @@
             {% endfor %}
         {% endif %}
         <div class="exist_account">
-            <p>Bạn đã có tài khoản? <a href="{% url 'login' %}">Đăng nhập</a></p>
+            <p>Already have an account? <a href="{% url 'login' %}">Sign in</a></p>
         </div>
     </div>
     <a class="close_sign_up" href="{% url 'home' %}">
