--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -10,7 +10,7 @@
 <div class="sign_up">
     <div class="welcome">
         <div class="slogan">
-            <h3 class="first">REAL VARID FILM</h3>
+            <h3 class="first">VARID FILM</h3>
         </div>
     </div>
 
