--- a/all_static_files/admin/css/base.css
+++ b/all_static_files/admin/css/base.css
@@ -8,10 +8,10 @@ html[data-theme="light"],
     --primary: #79aec8;
     --secondary: #417690;
     --accent: #f5dd5d;
-    --primary-fg: #fff;
+    --primary-fg: #000;
 
     --body-fg: #333;
-    --body-bg: #fff;
+    --body-bg: #000;
     --body-quiet-color: #666;
     --body-loud-color: #000;
 
@@ -37,7 +37,7 @@ html[data-theme="light"],
     --message-warning-bg: #ffc;
     --message-error-bg: #ffefef;
 
-    --darkened-bg: #f8f8f8; /* A bit darker than --body-bg */
+    --darkened-bg: #000; /* A bit darker than --body-bg */
     --selected-bg: #e4e4e4; /* E.g. selected table cells */
     --selected-row: #ffc;
 
