--- a/all_static_files/includes/footer.html
+++ b/all_static_files/includes/footer.html
@@ -5,12 +5,12 @@
     <div class="container">
         <section class="footer-bottom border-top row">
             <div class="col-md-2">
-                <p class="text-muted"> &copy 2024 Company name </p>
+                <p class="text-muted"> &copy 2024 VARID FILM </p>
             </div>
             <div class="col-md-8 text-md-center">
-                <span class="px-2">TheMiddles@gmail.com</span>
-                <span class="px-2">+879-332-9375</span>
-                <span class="px-2">Street name 123, Avanue abc</span>
+                <span class="px-2">hotline@varidfilm.es</span>
+                <span class="px-2">(+34) 913-984-300</span>
+                <span class="px-2">Av. de Concha Espina, 1, Chamartín</span>
             </div>
             <div class="col-md-2 text-md-right text-muted">
                 <i class="fab fa-lg fa-cc-visa"></i>
