--- a/global_static_files/css/home.css
+++ b/global_static_files/css/home.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: #ffffff;
+    background-color: #000000 !important;
     margin: 0;
     padding: 0;
     width: 100%;
