--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -36,7 +36,7 @@
     <div class="sign_in">
         <div class="welcome">
             <div class="slogan">
-                <h3 class="first">REAL VARID FILM</h3>
+                <h3 class="first">VARID FILM</h3>
             </div>
         </div>
 
